Update Temple Base for non-jumping

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ crashlytics-build.properties
 1BitJam/Assets/Mini First Person Controller*
 1BitJam/Assets/WebGLTemplates*
 1BitJam/Assets/StarterAssets*
+*.blend1
